<resources>
    <string name="app_name">Projeto2020</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="esqueceu_a_senha">Esqueceu a senha?</string>
    <string name="entrar">Entrar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="cadastro">Cadastro</string>
    <string name="ja_tem_cadastro">Já tem cadastro?</string>
    <string name="confirmar_senha">Confirmar senha</string>
    <string name="salvar">Salvar</string>
    <string name="preencha_todos_campos">Preencha todos os campos</string>
    <string name="criar_atividade">Criar Atividade</string>
    <string name="nome_da_atividade">Nome da atividade</string>
    <string name="descricao_da_atividade">Descrição da atividade</string>
    <string name="criar">Criar</string>
    <string name="email_senha_incorreto">Email ou senha incorreto</string>
    <string name="campos_senha_diferente">Email ou senha incorreto</string>
    <string name="usuario_existente_msg">Usuário já existente, tente outro email</string>
    <string name="pref_key">app_preferences</string>
    <string name="pref_login">LOGIN_DONE</string>
    <string name="pref_first_time">FIRST_TIME</string>
    <string name="current_email">EMAIL_CURRENT</string>
    <string name="jogar">Jogar</string>
    <string name="not_avaliable">Não disponível</string>
</resources>
