<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PerfilActivity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:elevation="10dp"
        android:shadowColor="#000"
        android:shadowRadius="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/wppr_roxo" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingVertical="25dp"
                android:paddingHorizontal="30dp"

                android:background="@drawable/box_atividade"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryBlue"
                    android:text="@string/nome_da_atividade"
                    android:textSize="22sp"
                    android:fontFamily="@font/poetsen_one_regular"
                    />

                <EditText
                    android:id="@+id/activity_add_edt_name"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:paddingHorizontal="15dp"
                    android:background="@drawable/create_input_box"
                    android:inputType="textAutoComplete" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryBlue"
                    android:text="@string/descricao_da_atividade"
                    android:layout_marginTop="15dp"
                    android:textSize="22sp"
                    android:fontFamily="@font/poetsen_one_regular"
                    />

                <EditText
                    android:id="@+id/activity_add_edt_description"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:background="@drawable/create_input_box"
                    android:inputType="textMultiLine"
                    android:padding="15dp"
                    android:gravity="left|top"
                    android:layout_marginTop="5dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primaryBlue"
                    android:text="Capa da Atividade"
                    android:gravity="center"
                    android:layout_marginTop="15dp"
                    android:textSize="22sp"
                    android:fontFamily="@font/poetsen_one_regular"
                    />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gray_button"
                    android:src="@drawable/img_icon"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal"/>

                <Button
                    android:id="@+id/activity_add_bt_criar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:background="@drawable/button_box"
                    android:text="@string/criar"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/white"
                    android:paddingTop="7dp"
                    android:fontFamily="@font/khula_bold"
                    android:textSize="24sp" />

            </LinearLayout>

        </ScrollView>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/khula_bold"
            android:text="@string/criar_atividade"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/primaryBlue"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>